<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mLayout" android:background="@android:color/background_dark" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <Button android:textSize="34dp" android:id="@+id/btn_tuner" android:background="@drawable/gradient" android:padding="10dp" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginBottom="32dp" android:text="@string/tuner" android:onClick="onTunerClick" style="@style/Widget.AppCompat.Button.Colored"/>
        <Button android:textSize="34dp" android:id="@+id/btn_chat" android:background="@drawable/gradient" android:padding="10dp" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginBottom="32dp" android:text="@string/chat" android:onClick="onChatClick" style="@style/Widget.AppCompat.Button.Colored"/>
        <Button android:textSize="34dp" android:id="@+id/btn_vault" android:background="@drawable/gradient" android:padding="10dp" android:layout_width="200dp" android:layout_height="wrap_content" android:text="@string/vault" android:onClick="onVaultClick" style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
