<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@android:color/background_dark" android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@android:color/black" android:gravity="top|left|center_vertical|center_horizontal|center|start" android:id="@+id/memo" android:background="@android:color/background_light" android:layout_width="386dp" android:layout_height="521dp" android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890\10 " android:inputType="textAutoComplete" android:autofillHints="memo,text" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.64" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.452"/>
    <Button android:id="@+id/btn_save" android:background="@drawable/gradient" android:layout_width="111dp" android:layout_height="58dp" android:layout_marginBottom="16dp" android:text="@string/save" android:onClick="onSaveClick" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0"/>
    <Button android:id="@+id/bnt_delete" android:background="@drawable/gradient" android:layout_width="111dp" android:layout_height="58dp" android:layout_marginBottom="16dp" android:text="@string/delete" android:onClick="onDeleteClick" android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0"/>
    <EditText android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textColor="@android:color/black" android:id="@+id/memo_title" android:background="@android:color/background_light" android:layout_width="378dp" android:layout_height="50dp" android:hint="@string/title" android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 " android:inputType="textAutoComplete" android:autofillHints="title" app:layout_constraintBottom_toTopOf="@+id/memo" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.593" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.549"/>
</androidx.constraintlayout.widget.ConstraintLayout>
