<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@android:color/background_dark" android:layout_width="match_parent" android:layout_height="match_parent" android:tooltipText="Password">
    <TextView android:textSize="18sp" android:textColor="#ffffff" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="148dp" android:text="@string/password" app:layout_constraintEnd_toStartOf="@+id/tuner_pass" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <EditText android:textColor="#000000" android:id="@+id/tuner_user" android:background="@android:color/background_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="108dp" android:ems="10" android:inputType="textPersonName" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.797" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <EditText android:textColor="@android:color/black" android:id="@+id/tuner_pass" android:background="@android:color/background_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:ems="10" android:inputType="textPassword" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.797" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tuner_user"/>
    <NumberPicker android:id="@+id/channel" android:background="@android:color/darker_gray" android:visibility="visible" android:layout_width="67dp" android:layout_height="112dp" android:layout_marginBottom="212dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.403" app:layout_constraintStart_toEndOf="@+id/chan_text"/>
    <TextView android:textSize="36sp" android:textColor="@android:color/white" android:id="@+id/chan_text" android:layout_width="147dp" android:layout_height="49dp" android:layout_marginBottom="248dp" android:text="@string/channel" android:textAlignment="textEnd" android:layout_marginStart="44dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0"/>
    <TextView android:textSize="18sp" android:textColor="#ffffff" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="108dp" android:text="@string/user" android:layout_marginStart="44dp" app:layout_constraintEnd_toStartOf="@+id/tuner_user" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="26dp" android:layout_margin="10dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.426">
        <TextView android:textColor="@android:color/white" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="OFF" android:layout_marginStart="0dp"/>
        <Switch android:id="@+id/switch1" android:background="@android:color/darker_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginHorizontal="10dp"/>
        <TextView android:textColor="@android:color/white" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="ON" android:layout_marginEnd="0dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
